- Users can now return to the main menu at any time in the program by typing the number 0.
- Added color to text to point out key words.
- Added service date calculator. This tool tells you what hearing dates we are accepting as of a date you specify.
- Calculating the date for Request for Orders has been updated to count 23 court days instead of a mixture of calendar days and court days.

### Changed
- Made significant changes to the code in order for the new features to work.
- Returning to the main menu is now automatic; pressing Enter key is no longer required.
- Text cursor is now hidden when messages are diplayed.
- Converted wall of text at the beginning into  more questions to the "Can I close this file?" process.


## [1.0] - 2020-07-24

### Added
- Additional verification of dates entered for bankruptcies. For example, the program verifies that you enter a bankruptcy disposition date that is after the bankruptcy filing date.
- Calculating the levy lien period expiration now asks if it's for a writ of attachment, which increases the levy lien period to 3 years in its calculation.

### Changed
- Some of the text throughout the program was edited for improved clarity. For example, the main menu choices now have "BANKRUPTCY" added to it so the user knows what that function is normally used for.


## [0.3.0] - 2020-07-23

### Added
- The application info will display every time you return to the main menu.
- Gave users option to quit before proceeding to questions to close a file, just in case any of the reasons to stop immediately applies to their file.
- The Employer's Return menu has a new option choice just in case the response type doesn't match any of the more important categories. If the employer's response is simply correspondence without any important info (e.g., leave of absence, termination, etc.), then they can select the new option to continue.